err/discon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/conda'...
Listing './lib/python3.5/site-packages/conda/_vendor'...
Listing './lib/python3.5/site-packages/conda/_vendor/auxlib'...
Listing './lib/python3.5/site-packages/conda/_vendor/auxlib/_vendor'...
Listing './lib/python3.5/site-packages/conda/_vendor/auxlib/_vendor/boltons'...
Listing './lib/python3.5/site-packages/conda/_vendor/boltons'...
Listing './lib/python3.5/site-packages/conda/_vendor/progressbar'...
Listing './lib/python3.5/site-packages/conda/_vendor/toolz'...
Listing './lib/python3.5/site-packages/conda/_vendor/urllib3'...
Listing './lib/python3.5/site-packages/conda/_vendor/urllib3/util'...
Listing './lib/python3.5/site-packages/conda/base'...
Listing './lib/python3.5/site-packages/conda/cli'...
Listing './lib/python3.5/site-packages/conda/common'...
Listing './lib/python3.5/site-packages/conda/core'...
Listing './lib/python3.5/site-packages/conda/gateways'...
Listing './lib/python3.5/site-packages/conda/gateways/adapters'...
Listing './lib/python3.5/site-packages/conda/gateways/disk'...
Listing './lib/python3.5/site-packages/conda/models'...
Listing './lib/python3.5/site-packages/conda-4.3.16.egg-info'...
Listing './lib/python3.5/site-packages/conda_env'...
Listing './lib/python3.5/site-packages/conda_env/cli'...
Listing './lib/python3.5/site-packages/conda_env/installers'...
Listing './lib/python3.5/site-packages/conda_env/specs'...
Listing './lib/python3.5/site-packages/conda_env/utils'...
Listing './lib/python3.5/site-packages/discon'...
Compiling './lib/python3.5/site-packages/discon/__main__.py'...
***   File "./lib/python3.5/site-packages/discon/__main__.py", line 34
    print "pull, patch, push, push --tags"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/discon-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycosat-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
